# Calorie-Calculator-with-django

./: README.md  db.sqlite3  pyproject.toml
calorieApp/: apps.py  models.py  views.py
calorieApp/migrations/: 0001_initial.py
calorieApp/templates/calorieApp/: index.html
config/: settings.py  urls.py
